fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/Winners_Guide__c.object-meta.xml
<CustomObject>
    <label>Winners Guide</label>
    <nameField>
        <displayFormat>WG-{00000}</displayFormat>
        <label>Winners Guide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Winners Guides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>