fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Account_currently_placing_arterials__c.field-meta.xml
<CustomField>
    <fullName>Account_currently_placing_arterials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ultrasound: Is the account currently placing arterials utilizing U/S?</description>
    <inlineHelpText>Ultrasound: Is the account currently placing arterials utilizing U/S?</inlineHelpText>
    <label>Account currently placing arterials...</label>
    <type>Checkbox</type>
</CustomField>