fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Account_having_policy_procedure__c.field-meta.xml
<CustomField>
    <fullName>Account_having_policy_procedure__c</fullName>
    <description>Policy and Procedures : Does the account have a policy and procedure in place for arterial placements?
Arterials
Need Analysis
Vetting</description>
    <inlineHelpText>Policy and Procedures : Does the account have a policy and procedure in place for arterial placements?
Arterials
Need Analysis
Vetting</inlineHelpText>
    <label>*Account having policy &amp; procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>