fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Acct_agrees_to_Quiet_Period_before_Eval__c.field-meta.xml
<CustomField>
    <fullName>Acct_agrees_to_Quiet_Period_before_Eval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account has agreed to a competitive “Quiet Period” during the evaluation. Confirmed?</description>
    <inlineHelpText>Confirm account has agreed to a competitive “Quiet Period” (no competitive trials) during the Teleflex product evaluation.   Y    N</inlineHelpText>
    <label>Acct agrees to Quiet Period during Eval</label>
    <type>Checkbox</type>
</CustomField>