fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Age_of_Oldest_tip_confirmation_system__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Oldest_tip_confirmation_system__c</fullName>
    <label>Age of Oldest Tip Confirmation System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less Than 5 years</fullName>
            </value>
            <value>
                <fullName>More than 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>