fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Agree_onsite_rounding_by_VAT_TFX_team__c.field-meta.xml
<CustomField>
    <fullName>Agree_onsite_rounding_by_VAT_TFX_team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agree to onsite rounding by Vascular Access Team and Teleflex team member</description>
    <inlineHelpText>Agree to onsite rounding by Vascular Access Team and Teleflex team member</inlineHelpText>
    <label>Agree onsite rounding by VAT &amp; TFX team</label>
    <type>Checkbox</type>
</CustomField>