fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Agree_TFX_Prod_Insertion_Video_Guide__c.field-meta.xml
<CustomField>
    <fullName>Agree_TFX_Prod_Insertion_Video_Guide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agree TFX Prod. Insertion Video and/or guide?</description>
    <inlineHelpText>Agree to Teleflex Product Insertion Video and/or guide?</inlineHelpText>
    <label>Agree TFX Prod. Insertion Video/Guide?</label>
    <type>Checkbox</type>
</CustomField>