fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Agree_to_Arterial_Care_and_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Arterial_Care_and_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agree to Arterial Care and Maintenance/Troubleshooting Teleflex Academy E-Learning?</description>
    <inlineHelpText>Agree to Arterial Care and Maintenance/Troubleshooting Teleflex Academy E-Learning?</inlineHelpText>
    <label>Agree to Arterial Care and Maintenance..</label>
    <type>Checkbox</type>
</CustomField>