fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Agree_to_of_cases_required_for_eval__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_of_cases_required_for_eval__c</fullName>
    <description>Agree to # of cases required for evaluation: (Will likely depend on size of account. Keep # as low as you can – e.g. max of 2 weeks or 16 Stylets [2 cases]).</description>
    <inlineHelpText>Agree to # of cases required for evaluation: (Will likely depend on size of account. Keep # as low as you can – e.g. max of 2 weeks or 16 Stylets [2 cases]).</inlineHelpText>
    <label>*Agree to # of cases required for eval.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>