fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/All_kit_components__c.field-meta.xml
<CustomField>
    <fullName>All_kit_components__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All kit components</description>
    <inlineHelpText>All kit components</inlineHelpText>
    <label>All kit components</label>
    <type>Checkbox</type>
</CustomField>