fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Anesthesia__c.field-meta.xml
<CustomField>
    <fullName>Anesthesia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anesthesia</label>
    <type>Checkbox</type>
</CustomField>