fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Appropriate_Bedside_and_Quick_Guide__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_Bedside_and_Quick_Guide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Appropriate Bedside Guide and Quick Guide</description>
    <inlineHelpText>Appropriate Bedside Guide and Quick Guide</inlineHelpText>
    <label>Appropriate Bedside and Quick Guide</label>
    <type>Checkbox</type>
</CustomField>