fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Approved_by_Value_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Value_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Product trial approved by Value Analysis?

DO NOT MOVE FORWARD UNLESS APPROVED</inlineHelpText>
    <label>*Approved by Value Analysis</label>
    <type>Checkbox</type>
</CustomField>