fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Approved_policy_and_procedure__c.field-meta.xml
<CustomField>
    <fullName>Approved_policy_and_procedure__c</fullName>
    <description>DO NOT MOVE FORWARD UNLESS EITHER APPROVED OR IN DRAFT FORM
Midline
Need Analysis Stage
Trial/Evaluation Criteria</description>
    <inlineHelpText>DO NOT MOVE FORWARD UNLESS EITHER APPROVED OR IN DRAFT FORM
Midline
Need Analysis Stage
Trial/Evaluation Criteria</inlineHelpText>
    <label>*Approved policy and procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>