fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Are_they_open_to_trial_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Are_they_open_to_trial_evaluation__c</fullName>
    <description>Are they open to trial/evaluation?</description>
    <inlineHelpText>Are they open to trial/evaluation?</inlineHelpText>
    <label>*Are they open to trial/evaluation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>