fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Are_they_open_to_trial_evaluation_NotReq__c.field-meta.xml
<CustomField>
    <fullName>Are_they_open_to_trial_evaluation_NotReq__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are they open to trial/evaluation?</description>
    <inlineHelpText>Are they open to trial/evaluation?</inlineHelpText>
    <label>Are they open to trial/evaluation?</label>
    <type>Checkbox</type>
</CustomField>