fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Arrow_Advance_unfamiliar_decide_no_use__c.field-meta.xml
<CustomField>
    <fullName>Arrow_Advance_unfamiliar_decide_no_use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Arrow® Advancer — (if unfamiliar may decide not to use)
PICC, Midline
Evaluation Go Live/Clinical
Provide Clinical Education, Demo and Practice Prior to Going Bedside for:</description>
    <inlineHelpText>Arrow® Advancer — (if unfamiliar may decide not to use)
PICC, Midline
Evaluation Go Live/Clinical
Provide Clinical Education, Demo and Practice Prior to Going Bedside for:</inlineHelpText>
    <label>Arrow Advance:unfamiliar decide no use</label>
    <type>Checkbox</type>
</CustomField>