fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Arterial_brochure__c.field-meta.xml
<CustomField>
    <fullName>Arterial_brochure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arterial brochure</label>
    <type>Checkbox</type>
</CustomField>