fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Arterial_Device_Only_or_Kits_Required__c.field-meta.xml
<CustomField>
    <fullName>Arterial_Device_Only_or_Kits_Required__c</fullName>
    <label>*Arterial Device Only or Kits?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>