fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Arterial_insertion_Talk_Track__c.field-meta.xml
<CustomField>
    <fullName>Arterial_insertion_Talk_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Arterial insertion Talk Track − no approval required</inlineHelpText>
    <label>Arterial insertion Talk Track</label>
    <type>Checkbox</type>
</CustomField>