fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Arterial_Line_Dressing_products__c.field-meta.xml
<CustomField>
    <fullName>Arterial_Line_Dressing_products__c</fullName>
    <label>Arterial Line Dressing products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BioPatch®</fullName>
            </value>
            <value>
                <fullName>Tegaderm™</fullName>
            </value>
            <value>
                <fullName>Tegaderm™ CHG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>