fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Arterial_Product__c.field-meta.xml
<CustomField>
    <fullName>Arterial_Product__c</fullName>
    <description>Arterial Product</description>
    <inlineHelpText>Arterial Product</inlineHelpText>
    <label>*Arterial Product</label>
    <length>55</length>
    <type>Text</type>
</CustomField>