fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Arterial_Yrly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Arterial_Yrly_Volume__c</fullName>
    <label>*Arterial Yrly Volume</label>
    <length>55</length>
    <type>Text</type>
</CustomField>