fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/ArterialTXT__c.field-meta.xml
<CustomField>
    <fullName>ArterialTXT__c</fullName>
    <description>Current Manufacture Arterial</description>
    <inlineHelpText>Current Manufacture Arterial</inlineHelpText>
    <label>Arterial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>