fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/ArterialYrlyVolume__c.field-meta.xml
<CustomField>
    <fullName>ArterialYrlyVolume__c</fullName>
    <description>Current Manufacture Arterial/Yrly Volume</description>
    <inlineHelpText>Current Manufacture Arterial/Yrly Volume</inlineHelpText>
    <label>Arterial\Yrly Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>