fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <description>Vetting - VettingTracking current midline data?</description>
    <inlineHelpText>Vetting - VettingTracking current midline data?</inlineHelpText>
    <label>Average dwell (days)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>