fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Based_on_goals_of_catheters__c.field-meta.xml
<CustomField>
    <fullName>Based_on_goals_of_catheters__c</fullName>
    <description>Based on goals # of catheters
Midline
Value Proposition Stage
Trial/Evaluation Criteria</description>
    <inlineHelpText>Based on goals # of catheters
Midline
Value Proposition Stage
Trial/Evaluation Criteria</inlineHelpText>
    <label>Based on goals # of catheters</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>