fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/BasedongoalsofInserters__c.field-meta.xml
<CustomField>
    <fullName>BasedongoalsofInserters__c</fullName>
    <description>Based on evaluation goals determine # of inserters
Midline, PICC, Endurance, Arterials, VPS
Value Proposition Stage
Trial/Evaluation Criteria</description>
    <inlineHelpText>Based on evaluation goals determine # of inserters
Midline, PICC, Endurance, Arterials, VPS
Value Proposition Stage
Trial/Evaluation Criteria</inlineHelpText>
    <label>Based on goals # of Inserters</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>