fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Bevel_safety_non_safety_needles__c.field-meta.xml
<CustomField>
    <fullName>Bevel_safety_non_safety_needles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bevel/safety non-safety needles (explain differences between A and B)</description>
    <inlineHelpText>Bevel/safety non-safety needles (explain differences between A and B)</inlineHelpText>
    <label>Bevel/safety non-safety needles</label>
    <type>Checkbox</type>
</CustomField>