fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Blooddrawculture__c.field-meta.xml
<CustomField>
    <fullName>Blooddrawculture__c</fullName>
    <description>PICC, Endurance, Midline 
Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</description>
    <inlineHelpText>PICC, Endurance, Midline 
Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</inlineHelpText>
    <label>Blood draw/culture</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>