fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/BS_CSuite_Cap_Equip_Comm__c.field-meta.xml
<CustomField>
    <fullName>BS_CSuite_Cap_Equip_Comm__c</fullName>
    <label>BS_CSuite_Cap_Equip_Comm</label>
    <length>15</length>
    <type>Text</type>
</CustomField>