fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/BS_MatMgmt_SuppChn_Sup_Comments__c.field-meta.xml
<CustomField>
    <fullName>BS_MatMgmt_SuppChn_Sup_Comments__c</fullName>
    <label>BS_MatMgmt_SuppChn_Sup_Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>