fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/BS_Other_Lvl_of_Sup__c.field-meta.xml
<CustomField>
    <fullName>BS_Other_Lvl_of_Sup__c</fullName>
    <label>BS_Other_Lvl_of_Sup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>