fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/BS_QualityRskMgmt_Nme_Em_Ph__c.field-meta.xml
<CustomField>
    <fullName>BS_QualityRskMgmt_Nme_Em_Ph__c</fullName>
    <label>BS_QualityRskMgmt_Nme_Em_Ph</label>
    <length>255</length>
    <type>Text</type>
</CustomField>