fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/BSI__c.field-meta.xml
<CustomField>
    <fullName>BSI__c</fullName>
    <label>BSI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>