fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Budget_Process_Start_and_End_dates__c.field-meta.xml
<CustomField>
    <fullName>Budget_Process_Start_and_End_dates__c</fullName>
    <inlineHelpText>Budget Approval Deadlines</inlineHelpText>
    <label>Budget Process Start and End dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>