fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Catheter_removed_prior_to_unit_transfer__c.field-meta.xml
<CustomField>
    <fullName>Catheter_removed_prior_to_unit_transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will catheter be removed prior to unit transfer?</inlineHelpText>
    <label>Catheter removed prior to unit transfer?</label>
    <type>Checkbox</type>
</CustomField>