fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/CDC__c.field-meta.xml
<CustomField>
    <fullName>CDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDC</label>
    <type>Checkbox</type>
</CustomField>