fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Chosen_DLX_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Chosen_DLX_Configuration__c</fullName>
    <label>Chosen DLX Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ultrasound with TipTracker Navigation and ECG</fullName>
            </value>
            <value>
                <fullName>TipTracker Navigation and ECG</fullName>
            </value>
            <value>
                <fullName>Ultrasound with ECG</fullName>
            </value>
            <value>
                <fullName>ECG only</fullName>
            </value>
            <value>
                <fullName>Ultrasound only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>