fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Clinical_documentation_captured_in_SF__c.field-meta.xml
<CustomField>
    <fullName>Clinical_documentation_captured_in_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clinical documentation captured in SF.com</description>
    <inlineHelpText>Clinical documentation captured in SF.com</inlineHelpText>
    <label>Clinical documentation captured in SF</label>
    <type>Checkbox</type>
</CustomField>