fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Clinical_Education_pre_work__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Education_pre_work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clinical Education: Do you have a commitment for Clinical Education pre-work(4 TFXA online courses, ~6.25hrs)?</description>
    <inlineHelpText>Clinical Education: Do you have a commitment for Clinical Education pre-work(4 TFXA online courses, ~6.25hrs)?</inlineHelpText>
    <label>*Clinical Education pre-work?</label>
    <type>Checkbox</type>
</CustomField>