fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Clinical_Education_pre_work_NotRequired__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Education_pre_work_NotRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clinical Education: Do you have a commitment for Clinical Education pre-work?</description>
    <inlineHelpText>Clinical Education: Do you have a commitment for Clinical Education pre-work?</inlineHelpText>
    <label>Clinical Education pre-work?</label>
    <type>Checkbox</type>
</CustomField>