fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Clinically_Demo_Kit_All_Components__c.field-meta.xml
<CustomField>
    <fullName>Clinically_Demo_Kit_All_Components__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clinically Demonstrate Kit &amp; All Components (do not demo VTFX capital equipment on a metal table</description>
    <inlineHelpText>Clinically Demonstrate Kit &amp; All Components (do not demo VTFX capital equipment on a metal table</inlineHelpText>
    <label>Clinically Demo Kit &amp; All Components</label>
    <type>Checkbox</type>
</CustomField>