fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Cnfrm_1_Radiologist_for_final_read__c.field-meta.xml
<CustomField>
    <fullName>Cnfrm_1_Radiologist_for_final_read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm one Radiologist, if possible, for final read?</description>
    <inlineHelpText>Confirm one Radiologist, if possible, for final read?</inlineHelpText>
    <label>Cnfrm 1 Radiologist, for final read?...</label>
    <type>Checkbox</type>
</CustomField>