fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Cnfrm_cart_accessories_rcvd_config__c.field-meta.xml
<CustomField>
    <fullName>Cnfrm_cart_accessories_rcvd_config__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm cart accessories received and configured,with Biomed check-in</inlineHelpText>
    <label>Cnfrm cart accessories rcvd &amp; config...</label>
    <type>Checkbox</type>
</CustomField>