fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Cnfrm_correlation_w_Radiology_thru_eval__c.field-meta.xml
<CustomField>
    <fullName>Cnfrm_correlation_w_Radiology_thru_eval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cnfrm correlation w/Radiology thru eval</description>
    <inlineHelpText>Confirm we will be able to have correlation discussions with Radiology throughout evaluation</inlineHelpText>
    <label>Cnfrm correlation w/Radiology thru eval.</label>
    <type>Checkbox</type>
</CustomField>