fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Cnfrm_Policy_and_Proc_to_eliminate_CXR__c.field-meta.xml
<CustomField>
    <fullName>Cnfrm_Policy_and_Proc_to_eliminate_CXR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm Policy and Procedure has been initiated to eliminate CXR, or is in draft form (provide sample policy and assistance if needed)</description>
    <inlineHelpText>Confirm Policy and Procedure has been initiated to eliminate CXR, or is in draft form (provide sample policy and assistance if needed)</inlineHelpText>
    <label>Cnfrm Policy and Proc. to eliminate CXR</label>
    <type>Checkbox</type>
</CustomField>