fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Commitment_to_purchase_if_goals_met__c.field-meta.xml
<CustomField>
    <fullName>Commitment_to_purchase_if_goals_met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commitment to purchase if goals met?</label>
    <type>Checkbox</type>
</CustomField>